<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <group
        android:orderInCategory="0">



        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:orderInCategory="100"
            android:icon="@drawable/ic_search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/delete"
            android:title="@string/delete"
            android:orderInCategory="100"
            android:icon="@drawable/ic_delete"
            app:showAsAction="ifRoom"/>


        <item
            android:id="@+id/newfolder"
            android:title="@string/newfolder"
            android:orderInCategory="300"
            android:icon="@drawable/ic_create_new_folder"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/newText"
            android:title="@string/newtext"
            android:orderInCategory="300"
            android:icon="@drawable/ic_new_text_file"
            app:showAsAction="ifRoom"
            android:visible="false"/>

        <item
            android:id="@+id/move"
            android:title="@string/move"
            android:orderInCategory="300"
            android:icon="@drawable/ic_content_cut"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/copy"
            android:title="@string/copy"
            android:orderInCategory="300"
            android:icon="@drawable/ic_content_copy"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/show_by"
            android:title="@string/show_by"
            android:orderInCategory="300"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/sort_by"
            android:title="@string/sort_by"
            android:orderInCategory="300"
            android:icon="@drawable/ic_sort"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/compress"
            android:title="@string/compress"
            android:orderInCategory="300"
            android:icon="@drawable/ic_zip"
            app:showAsAction="ifRoom"
            android:visible="false"/>

        <item
            android:id="@+id/paste"
            android:title="@string/paste"
            android:orderInCategory="300"
            android:icon="@drawable/ic_paste"
            app:showAsAction="ifRoom"
            android:enabled="false"/>


    </group>

</menu>